--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,9 @@ dependencies:
   intl: ^0.20.2
   flutter_slidable: ^3.1.2
   flutter_spinkit: ^5.2.1
+  shared_preferences: ^2.5.2
+
+  
  
   
  
